--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   convert: ^3.1.2
   flutter_localizations:
     sdk: flutter
+  flutter_acrylic: ^1.1.4
 
 dev_dependencies:
   flutter_test:
