--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_acrylic: ^1.1.4
+  window_manager: ^0.5.1
+  device_info_plus: ^11.5.0
 
 dev_dependencies:
   flutter_test:
